# RuleBasedSystem

./: CMakeLists.txt  README.md
data/: case1_rules.txt  case2_rules.txt  case3_rules.txt  case4_rules.txt  case5_rules.txt  case6_rules.txt  case7_rules.txt  case8_rules.txt  caseAmogus.txt  casoAmogus.txt  extraGradingCase_rules.txt
include/: AST.hpp  Environment.hpp  Interpreter.hpp  Lexer.hpp  Parser.hpp  StaticAnalyzer.hpp  Token.hpp
src/: Environment.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp  StaticAnalyzer.cpp  main.cpp
